# libft

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ft_atoi_n.c  ft_itoa_mem_d.c  ft_lstnew.c  ft_lstpushf.c  ft_lststrsplit.c  ft_lststrtoarr.c  ft_putnbr.c  ft_strsplit.c  libft.h  test_ft_printf
get_next_line/: get_next_line.c
inc/: ft_frame.h  ft_map.h  ft_printf.h  ft_term.h  get_next_line.h  libft.h  term.h
is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespace.c
lst/: ft_lstadd.c  ft_lstcut.c  ft_lstdel.c  ft_lstdelcontent.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpushb.c  ft_lstpushf.c  ft_lstsize.c  ft_lststrsplit.c  ft_lststrtoarr.c
mem/: ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
others/: ft_atoi.c  ft_atoi_n.c  ft_bzero.c  ft_itoa.c  ft_itoa_mem_d.c  ft_tolower.c  ft_toupper.c
put/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnendl.c  ft_putnstr.c  ft_putstr.c  ft_putstr_fd.c
src/ft_printf/: ft_extra_csp.c  ft_lltoa_base.c  ft_parsing.c  ft_pf_utils.c  ft_printf.c  ft_put_digit.c  ft_put_f.c  ft_put_oxup.c  ft_put_src.c  ft_putarg.c  ft_putnbrull.c  ft_ulltoa_base.c  ft_unumlen.c  is_whats.c  letspars_what.c  letsprint_percent.c  print_csp.c  print_diu.c  print_f.c  print_ox.c  utils_f.c  utils_ox.c  utils_printf.c
src/get/: ft_getch.c  ft_getint.c  ft_gnl.c  ft_gnl_light.c  get_next_line.c
src/get_next_line/: get_next_line.c
src/is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespace.c
src/lst/: ft_lstadd.c  ft_lstcut.c  ft_lstdel.c  ft_lstdelcontent.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpushb.c  ft_lstpushf.c  ft_lstputendl.c  ft_lstputendl_fd.c  ft_lstputstr.c  ft_lstputstr_fd.c  ft_lstsize.c  ft_lststrsplit.c  ft_lststrtoarr.c
src/lst2/: ft_2lstcut.c  ft_2lstdel.c  ft_2lstdelone.c  ft_2lstinsert.c  ft_2lstnew.c  ft_2lstpushb.c  ft_2lstpushf.c  ft_2lststrsplit.c
src/map/: ft_map_add.c  ft_map_del_elm.c  ft_map_destroy.c  ft_map_getbykey.c  ft_map_new.c  ft_map_print_all.c  ft_map_set.c
src/mem/: ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
src/others/: ft_abs.c  ft_atoi.c  ft_atoi_n.c  ft_bzero.c  ft_itoa.c  ft_itoa_mem_d.c  ft_pass_whitespace.c  ft_tolower.c  ft_toupper.c
src/put/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl2d.c  ft_putendl_fd.c  ft_putmem.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbr_to_mem.c  ft_putnendl.c  ft_putnendl_fd.c  ft_putnstr.c  ft_putnstr_fd.c  ft_putstr.c  ft_putstr2d.c  ft_putstr_fd.c
src/str/: ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  (+20 more)
str/: ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
(+7 files in other folders)
