cmake_minimum_required(VERSION 3.19)
project(libft C)

set(CMAKE_C_STANDARD 99)

include_directories(inc)

add_executable(test_ft_printf

        src/is/ft_isalnum.c
        src/is/ft_isalpha.c
        src/is/ft_isascii.c
        src/is/ft_isdigit.c
        src/is/ft_isprint.c
        src/is/ft_iswhitespace.c
        src/lst/ft_lstadd.c
        src/lst/ft_lstcut.c
        src/lst/ft_lstdel.c
        src/lst/ft_lstdelcontent.c
        src/lst/ft_lstdelone.c
        src/lst/ft_lstiter.c
        src/lst/ft_lstmap.c
        src/lst/ft_lstnew.c
        src/lst/ft_lstpushb.c
        src/lst/ft_lstpushf.c
        src/lst/ft_lstsize.c
        src/lst/ft_lststrsplit.c
        src/lst/ft_lststrtoarr.c
        src/lst/ft_lstputstr_fd.c
        src/lst/ft_lstputendl_fd.c
        src/mem/ft_memalloc.c
        src/mem/ft_memccpy.c
        src/mem/ft_memchr.c
        src/mem/ft_memcmp.c
        src/mem/ft_memcpy.c
        src/mem/ft_memdel.c
        src/mem/ft_memmove.c
        src/mem/ft_memset.c
        src/others/ft_atoi.c
        src/others/ft_atoi_n.c
        src/others/ft_bzero.c
        src/others/ft_itoa.c
        src/others/ft_itoa_mem_d.c
        src/others/ft_tolower.c
        src/others/ft_toupper.c
        src/put/ft_putchar.c
        src/put/ft_putchar_fd.c
        src/put/ft_putendl.c
        src/put/ft_putendl_fd.c
        src/put/ft_putmem.c
        src/put/ft_putnbr.c
        src/put/ft_putnbr_fd.c
        src/put/ft_putnbr_to_mem.c
        src/put/ft_putnendl.c
        src/put/ft_putnstr.c
        src/put/ft_putstr.c
        src/put/ft_putstr_fd.c
        src/put/ft_putnstr_fd.c
        src/put/ft_putnendl_fd.c
        src/put/ft_putstr2d.c
        src/put/ft_putendl2d.c
        src/str/ft_strcat.c
        src/str/ft_strchr.c
        src/str/ft_strclr.c
        src/str/ft_strcmp.c
        src/str/ft_strcpy.c
        src/str/ft_strdel.c
        src/str/ft_strdup.c
        src/str/ft_strndup.c
        src/str/ft_strequ.c
        src/str/ft_striter.c
        src/str/ft_striteri.c
        src/str/ft_strjoin.c
        src/str/ft_strlcat.c
        src/str/ft_strlen.c
        src/str/ft_strmap.c
        src/str/ft_strmapi.c
        src/str/ft_strncat.c
        src/str/ft_strncmp.c
        src/str/ft_strncpy.c
        src/str/ft_strnequ.c
        src/str/ft_strnew.c
        src/str/ft_strnstr.c
        src/str/ft_strrchr.c
        src/str/ft_strsplit.c
        src/str/ft_strstr.c
        src/str/ft_strsub.c
        src/str/ft_strtrim.c
        src/get/ft_getch.c
        src/get/ft_getink.c
        src/term/ft_frame.c
        src/term/ft_get_term_size.c
        src/term/ft_set_atr.c
        src/term/ft_term.c
        src/term/ft_term_get_xy.c
        src/term/ft_term_icanon.c

        inc/ft_printf.h
        src/ft_printf/ft_parsing.c
        src/ft_printf/ft_pf_utils.c
        src/ft_printf/ft_printf.c
        src/ft_printf/ft_put_digit.c
        src/ft_printf/ft_put_f.c
        src/ft_printf/ft_put_oxup.c
        src/ft_printf/ft_put_src.c
        src/ft_printf/ft_putarg.c

        src/tests/test_ft_printf.c
        )